--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,3 @@
 theme: jekyll-theme-minimal
 title: Quantifying hydroclimate variability on our changing planet
-description: I am a PhD student at Lamont-Doherty Earth Observatory of Columbia University. 
-My research focus is to understand and model hydroclimate variability in South America, in observations and put them into 
-context of the past ~1500 years using tree rings and cave speleothems. Since history repeats itself, we can use the past to 
-inform the future and use climate model simulations to investigate projections of drought and precipitation variability for a 
-particular region. 
+description: I am a PhD student at Lamont-Doherty Earth Observatory of Columbia University. My research focus is to understand and model hydroclimate variability in South America, in observations and put them into context of the past ~1500 years using tree rings and cave speleothems. Since history repeats itself, we can use the past to inform the future and use climate model simulations to investigate projections of drought and precipitation variability for a particular region. 
